# industrial-defect-detection-yolov8

./: .gitignore  LICENSE  README.md  convert_voc_to_yolo.py  detect.py  pyproject.toml  train.py
