[project]
name = "git-repo1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "opencv-python>=4.13.0.92",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.22",
]
